Minor ug,dg update

--- a/README.adoc
+++ b/README.adoc
@@ -11,17 +11,17 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-== AddMin+   -  All in One Administration App
+== AddMin+   -  All-in-One Administration App
 //tag::AboutAddMin+[]
 
-*AddMin+* is an all in one administration desktop application, that is specially designed for any other events management
+*AddMin+* is an all-in-one administration desktop application, that is specially designed for any events management
 start-up company with limited manpower and resources. These companies would usually only be able to afford to hire
 one admin staff to handle both the management of events and employees and this can be tough.
 The Admin+ Team understands the struggles that start-ups faces on a daily basis, and we are here to help!
 
 *AddMin+* is specially designed to ease the workload of the admin and allow
-him/her to effectively handle the administrative tasks of the company by providing the following functions: event
-creation and deletion, editing of event details after creation, manual and automatic manpower allocation for events
+him/her to effectively handle the administrative tasks of the company by providing the following functions: manpower management,
+event creation and deletion, editing of event details after creation, manual and automatic manpower allocation for events
 and providing an overview of all the data via statistics. The purpose of this user guide is show the user how they can
 use our app to carry out their administrative tasks efficiently and also answer any questions they may have while using
 our app.
