--- a/docs/team/olivercheok20.adoc
+++ b/docs/team/olivercheok20.adoc
@@ -49,7 +49,7 @@ future extensions convenient and simple.
 *** Added miscellaneous commands to User Guide: https://github.com/AY1920S1-CS2103-F09-4/main/pull/70[#70], https://github.com/AY1920S1-CS2103-F09-4/main/pull/71[#71], https://github.com/AY1920S1-CS2103-F09-4/main/pull/133[#133], https://github.com/AY1920S1-CS2103-F09-4/main/pull/99[#136], https://github.com/AY1920S1-CS2103-F09-4/main/pull/206[#206]
 *** Added documentation for eligibility function to Developer Guide: https://github.com/AY1920S1-CS2103-F09-4/main/pull/228[#231]
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-F09-4/main/pull/99[#99], https://github.com/AY1920S1-CS2103-F09-4/main/pull/108[#108], https://github.com/AY1920S1-CS2103-F09-4/main/pull/109[#109], https://github.com/AY1920S1-CS2103-F09-4/main/pull/207[#207], https://github.com/AY1920S1-CS2103-F09-4/main/pull/206[#206],
+*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-F09-4/main/pull/99[#99], https://github.com/AY1920S1-CS2103-F09-4/main/pull/108[#108], https://github.com/AY1920S1-CS2103-F09-4/main/pull/109[#109], https://github.com/AY1920S1-CS2103-F09-4/main/pull/207[#207]
 
 == Contributions to the User Guide
 
