--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -30,7 +30,7 @@ Responsibilities: GUI
 
 === Murugesan Karthika
 image::kzrthikz.png[width="150", align="left"]
-{empty}[https://github.com/Kzrthikz[github]]
+{empty}[https://github.com/Kzrthikz[github]] [<<Kzrthikz#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Deadline Manager
