--- a/docs/team/carbongrid.adoc
+++ b/docs/team/carbongrid.adoc
@@ -13,13 +13,13 @@ ClerkPro is a desktop application designed for ease of managing clinic's appoint
 
 == Summary of contributions
 
-* *Major enhancement*: *Major Rework on User Interface (UI) with AutoComplete with flags.*
+* *Major enhancement (Largest Contribution): Major Rework on User Interface (UI) with AutoComplete with flags.*
 ** What it does: Reduces the mental workload & visual fatigue of user from having to carefully type commands and double checking the typed command or the user guide for supported commands and parameters.
 ** Justification: Enhances the user experience (UX) design significantly because it provides optimal focus on primary tasks at hand to reduce visual and cognitive expenditure.
 ** Highlights: Affects interaction against existing UI components as the traversal have to be critically handled from component to component.
 ** Credits: None
 
-* *Major enhancement*: *Reactive Search (Proposal & UX Concept)*
+* *Major enhancement: Reactive Search (Proposal & UX Concept)*
 ** What it does: Prevents un-necessary waiting by the user.
 ** Justification: Enhances the UX significantly as user no longer waits to preview the number of possible results.
 ** Highlights: Reactive Search should not block the main UI from user upon processing large data-sets.
@@ -51,7 +51,10 @@ ClerkPro is a desktop application designed for ease of managing clinic's appoint
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-include::../UserGuide.adoc[tag=ui]
+include::../UserGuide.adoc[tag=quickStart]
+====
+include::../UserGuide.adoc[tag=autoCompleteAndHistoryUG]
+====
 
 == Contributions to the Developer Guide
 
